--- a/package.json
+++ b/package.json
@@ -11,20 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
-    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/slider": "^4.4.2",
-    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "@reduxjs/toolkit": "^1.9.4",
-    "@tanstack/react-query": "^4.29.3",
-    "add": "^2.0.6",
     "axios": "^1.3.5",
-    "final-form": "^4.20.9",
     "native-base": "3.4.28",
     "react": "18.2.0",
-    "react-final-form": "^6.5.9",
     "react-native": "0.71.6",
     "react-native-contacts": "^7.0.5",
     "react-native-image-picker": "^5.3.1",
@@ -32,9 +25,7 @@
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
