--- a/ios/GiftTest/Info.plist
+++ b/ios/GiftTest/Info.plist
@@ -36,7 +36,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>NSContactsUsageDescription</key>
+	<string>Please provide Contact access to share giftcards with your friends</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
